# dynamic_cast_benchmark

./: CMakeLists.txt  dynamic_cast_benchmark.cpp
Priori/include/priori/: priori.h
kcl/Source/KCL/: KCL_RTTI.h
vrc/: rtti_base.h  type_id.h
